--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -12,8 +12,9 @@
   <!-- CSS Files
   ========================================================= -->
   <!-- Google web fonts - Open Sans -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+<!--   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
   <!-- /Google web fonts -->
+<link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
   <!-- Bootstrap CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- /Bootstrap CSS -->
@@ -66,7 +67,7 @@
     </div>
     <!-- /Edit With Your Name -->
     <!-- Edit With Your Job -->
-    <p class="side-menu-job">nerd at-large</p>
+    <p class="side-menu-job">world-bettering-nerd-at-large</p>
     <!-- /Edit With Your Job -->
   </div>
 </div>
@@ -93,7 +94,7 @@
     <!-- /edit with your name -->
   </div>
   <!-- edit with your Job -->
-  <p class="side-menu-job">nerd at-large</p>
+  <p class="side-menu-job">world-bettering-nerd-at-large</p>
   <!-- /edit with your job -->
   <!-- /Menu Header -->
 
@@ -111,8 +112,8 @@
 
   <!-- Other Buttons -->
   <div class="side-menu-buttons">
-    <a href="#" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
-    <a href="#" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
+    <a href="files/onepagersmall.pdf" target="_blank" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
+    <a href="mailto:nchurch@stanford.edu" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
   </div>
   <!-- /Other Buttons-->
 </div>
@@ -143,10 +144,10 @@
       <div class="row">
         <div class="header-buttons col-md-10 col-md-offset-1">
           <!-- Download Resume Button -->
-          <a href="#" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
+          <a href="files/onepagersmall.pdf" target="_blank" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
           <!-- /Download Resume Button -->
           <!-- Mail Button -->
-          <a href="#" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Send me a message</span></a>
+          <a href="mailto:nchurch@stanford.edu" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Send me a message</span></a>
           <!-- /Mail Button -->
         </div>
       </div>
@@ -618,7 +619,7 @@
           </section>
           <!-- ==>> /SECTION: WORK EXPERIENCE <<==== -->
 
-                     <!-- ====>> SECTION: PORTFOLIO <<====-->
+                     <!-- ====>> SECTION: VIDEO PORTFOLIO <<====-->
           <section class="timeline portfolio" id="portfolio">
 
             <!-- VERTICAL MARGIN (necessary for the timeline effect) -->
@@ -683,61 +684,6 @@
                     </div>
                     <!-- /Portfolio item -->
 
-                  <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="http://www.stanford2025.com/#intro" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <p class="portfolio-item-title"><strong>Stanford 2025</strong><br/> larger overview of higher ed design project</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/stanford2025.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="http://www.sensaimpact.com/" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <p class="portfolio-item-title"><strong>SENSA</strong><br/> co-founder of the Social Entrepreneurial Student's Association</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/sensa.png" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="files/alchemist_findings.pdf" target="_blank" title="download the pdf" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>The Alchemist's Accelerator</strong><br/> online education project</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/Alchemist-Accelerator.png" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
@@ -776,46 +722,6 @@
                     </div>
                     <!-- /Portfolio item -->
 
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="files/toolkit.pdf" target="blank" title="download the file" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>d.velop Toolkit </strong><br/> Revved project</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/d_velop.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="files/microchallenge_graphics.pdf" target="blank" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Company MicroChallenge</strong><br/>project for Suja Juice</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/microchallenge.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
                       <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
@@ -830,44 +736,6 @@
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
                           <img src="img/womensday.jpeg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="files/yifteeanalysis.pdf" target="blank"title="download yiftee analysis" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Yiftee Marketing Analysis</strong><br/>Global Entrepreneurial Markeing Project</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/yifteead.png" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                     <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="files/jobfitanalysis.pdf" target="_blank" title="download the pdf" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>[Jobfit]</strong><br/>tech entrepreneurship class industry and idea analysis</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/STVP.gif">
                         </div>
                       </a>
                     </div>
@@ -893,49 +761,7 @@
                     </div>
                     <!-- /Portfolio item -->
 
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="http://nikawater.org/" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Nika Water Website</strong><br/>Eco-friendly bottled water that donates 100% of its profits towards poverty alleviation projects</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <!-- http://site126320-9963-9687.strikingly.com/ -->
-                          <img src="img/nika.jpeg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="http://csi.gsb.stanford.edu/sehub" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Stanford GSB Social Entrepreneurship Hub</strong><br/>Researcher</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/socialE.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-
-                    <!--VIDEOS-->
-
-                     <!-- Video Portfolio item -->
+                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
                       <a href="https://www.youtube.com/watch?v=ZnsvHTLGuzw" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
@@ -968,7 +794,7 @@
           </section>
           <!-- ==>> /SECTION: PORTFOLIO <--></-->
 
-           <!-- ====>> SECTION: PORTFOLIO <<====-->
+           <!-- ====>> SECTION: WORK PORTFOLIO <<====-->
           <section class="timeline portfolio" id="portfolio">
 
             <!-- VERTICAL MARGIN (necessary for the timeline effect) -->
@@ -1461,30 +1287,6 @@
   </div>
 </section>
 <!-- /CONTENT
-========================================================= -->
-
-<!-- Contact Form - Ajax Messages
-========================================================= -->
-<!-- Form Sucess -->
-<div class="form-result modal-wrap" id="contactSuccess">
-  <div class="modal-bg"></div>
-  <div class="modal-content">
-    <h4 class="modal-title"><i class="fa fa-check-circle"></i> Success!</h4>
-    <p>Your message has been sent to us.</p>
-  </div>
-</div>
-<!-- /Form Sucess -->
-<!-- form-error -->
-<div class="form-result modal-wrap" id="contactError">
-  <div class="modal-bg"></div>
-  <div class="modal-content">
-    <h4 class="modal-title"><i class="fa fa-times"></i> Error</h4>
-    <p>There was an error sending your message.</p>
-  </div>
-</div>
-<!-- /form-error -->
-
-<!-- Contact Form - Ajax Messages
 ========================================================= -->
 
 <!-- Javascript Files
